# EmbeddedProgramming

./: .cmake-format.yaml  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CNAME  CODE_OF_CONDUCT.md  CppProperties.json  LICENSE.md  README.md  SUMMARY.md  _config.yml  book.toml  class notes  ctrl_printf.c  decltype.cpp  demo_constexpr.cpp  demo_is_instance_of.cpp  demo_is_multiple_of.cpp  demo_parse_str.cpp  demo_udl.cpp  demo_weak_ptr.cpp  exec  makefile  mockFinal.cpp  mytime.cpp  mytimeMain.cpp  mytime_olConstructor.cpp  mytime_olFunctions.cpp  pax_the_cat.cpp  pax_the_cat_function.cpp  rectangle_olConstructor.cpp  structure2.cpp
Boost/: CMakeLists.txt  README.md  boost_units.inl
Boost/Common/: CMakeLists.txt  CMakelists.txt  test.cpp
Boost/LambdaExample/: CMakeLists.txt  CMakelists.txt  LambdaExample.cpp  README.md  lambda.cpp
Boost/MultiArray/: CMakeLists.txt  multi_array.cpp
Boost/StringRef/: string_ref.cpp
Boost/TimeDate/: CMakeLists.txt  CMakelists.txt  progress_timer.cpp  timer.cpp
Boost/TypeIndex/: type_index.cpp
ChangeTextColour/: CMakeLists.txt  CMakelists.txt  ChangeTextColour.c  change_text_colour.c  color.cpp  color.hpp
Class/: CMakeLists.txt  CMakelists.txt  ClassNotesUser.cpp  module_student_unittest.d  notes_user.cpp  struct_euclidean_vec_unittest.d  struct_student_unittest.d  student.d  use_tuple.d
Class/AngryBirds/: AngryBirds.cpp  AngryBirds.hpp  Makefile  main.cpp
Concept/: CMakeLists.txt  EqualityComparable.hpp  HasPushBack.hpp  README.md  SupportsComparison.hpp  SupportsHashFunction.hpp  concepts_type_traits.inl  usecase_comparison.cpp  usecase_haspushback.cpp
CopyConstructor/: CMakeLists.txt  CMakelists.txt  derived_class_copying.cpp  example_Rectangle.cpp  lab_Time.cpp  rectangle.cpp  time.cpp
DefaultArgument/: CMakeLists.txt  CMakelists.txt  lab_Schedule.cpp  notes_class_Person.cpp  person.cpp  schedule.cpp
Demonstration/: CMakeLists.txt  __func__.cpp  __units_and_dimensions__.cpp  auto.cpp  ctrl_printf.c  decltype.cpp  demo_constexpr.cpp  demo_is_instance_of.cpp  demo_is_multiple_of.cpp  demo_parse_str.cpp  demo_template.cpp  demo_udl.cpp  is_multiple_of.cpp  ranges.cpp  unions_align.cpp  winAPI_GetCommandLineA.cpp
Encapsulation/: CMakeLists.txt  CMakelists.txt  interface.cpp  interface_design_date.cpp  interface_design_example.cpp  printable_entity.cpp  uncopyable_class.cpp
FriendClass/: CMakeLists.txt  CMakelists.txt  example_Square_Rectangle.cpp  lab_Time_Date.cpp  lab_Time_Date.h  lab_Time_Date_complete.cpp  lab_Time_Date_fn.cpp  lab_Time_Date_main.cpp  square_rectangle.cpp  time_date.cpp
GoogleTest/: CMakeLists.txt  CMakelists.txt  bank_account_test.cpp  factorial_test.cpp  hello_test.cpp  queue_test.cpp
HackerRank/: CMakeLists.txt  CMakelists.txt  CamelCase.cpp  FindDigits.cpp  README.md  TimeConversion.cpp  VirtualFunctions.cpp  camel_case.cpp  find_digit.cpp  print_linked_list.cpp  recursive_nth_term.cpp  time_conversion.cpp  virtual_function.cpp
Inheritance/: BankingAccounts.cpp  BankingAccounts.hpp  CMakeLists.txt  Inheritance_lab_functions.cpp  Inheritance_lab_header.h  Inheritance_lab_main.cpp  Inheritance_notes.cpp  Inheritance_polymorphism.cpp  main.cpp  makefile  notes.cpp  virtual_inheritance_notes.cpp
IntroductionToRobotics/: CMakeLists.txt  Inverse_of_3_by_3_matrix.tex  always_inline.hpp  dnn_introduction.cpp  matrix_constraint.hpp  matrix_determinant.hpp  matrix_multiply.hpp  matrix_multiply.inl  matrix_multiply_unittest.cpp  matrix_size.hpp  matrix_transpose.hpp  matrix_transpose.inl  matrix_transpose_unittest.cpp  robots_and_robotics.drawio  simple_kalman_filter.cpp  umich_robotics_101_determinant.ipynb  umich_robotics_101_matrices.ipynb  umich_robotics_101_plotting.ipynb
Lambda/: CMakeLists.txt  CMakelists.txt  OperationFactory.hpp  generic_add.cpp  lambda_functional.cpp  lambda_notes.cpp  lambda_scope_demo.cpp  lambda_typed_min_max.cpp  lambda_with_stdlib.cpp  notes.cpp  operation_factory.hpp  overload_variadic_lambda.cpp  scope.cpp
MoveSemantic/: CMakeLists.txt  CMakelists.txt  move_assignment.cpp  move_semantics.cpp  move_with_util.cpp
MultipleInheritance/: CMakeLists.txt  CMakelists.txt  coloured_circle.cpp  date_time.cpp  example_Time_Date.cpp  lab_Circle_Colour.cpp
NumPyAPI/: CMakeLists.txt  main.cpp
OperatorOverload/: CMakeLists.txt  CMakelists.txt  assignment.cpp  conversion.cpp  parenthesis_fn_obj.cpp
Pointer/: CMakeLists.txt  CMakelists.txt  C_Pointer_notes.c  Pointer_compare.cpp  Pointer_lab.h  Pointer_lab_fn.cpp  Pointer_lab_main.cpp  Pointer_notes.h  Pointer_notes_Calendar.cpp  Pointer_notes_mytime_mydate.h  README.md  compare_replace.cpp  function_pointers.cpp  ptr32_ptr64.cpp  smart_pointers.cpp  smart_ptr.cpp  time&date.h  time&dateFn.cpp  weak_ptr.cpp
Projects/: CMakeLists.txt  pax_the_cat.cpp
PyTorch/: CMakeLists.txt  argminmax.hpp  dcgan.cpp
SimpleTMP/: CMakeLists.txt  FibonacciSeries.cpp  RecursiveFactorial.cpp
StandardTemplateLibrary/: CMakeLists.txt  CMakelists.txt  README.md  STL_array_string.cpp  STL_deque.cpp  STL_list.cpp  STL_string_tranform.cpp  STL_template.cpp  array.cpp  array_2D.cpp  array_string.cpp  array_tranform.cpp  deque.cpp  list.cpp  map.cpp  string_tranform.cpp  template.cpp  two_dims_array.cpp  valarray.cpp
String/: CMakeLists.txt  SaferString.cpp  const_string_buffer.hpp  get_line_trim.c  lab.c  lab.cpp  notes.c  notes.cpp  strcat.hpp  stringCharArray.c  stringLab.cpp  stringNotes.c  stringNotes.cpp  string_literal.hpp
Struct/: CMakeLists.txt  CMakelists.txt  StructNotesUser.cpp  notes_user.cpp  struct_size.c
Template/: CMakeLists.txt  README.md  template_notes.cpp
Thread/: 1_ways_to_create_threads.cpp  CMakeLists.txt  CMakelists.txt  atomic.cpp  create_threads.cpp  demo_atomic.cpp  thread_id.cpp  thread_sleep.cpp  touch_thread.cpp  touch_thread_1.cpp  touch_thread_2.cpp
TrickyQuestions/: CMakeLists.txt  IKMTestQuestion.cpp  Makefile  MatroxTestQuestion.cpp  RossVideoTestQuestion.cpp  macro.cpp  template_class_static.cpp
TypeInfo/: CMakeLists.txt  README.md  decltype.cpp  is_array.cpp  is_something.cpp
(+909 files in other folders)
